add title to stat